--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "destination": "/api/$1"
+      "dest": "/api/$1"
     },
     {
       "src": "/(.*)",
-      "destination": "/index.html"
+      "dest": "/index.html"
     }
   ],
   "functions": {
@@ -15,4 +15,4 @@
       "runtime": "@vercel/node@latest"
     }
   }
-} 
+}
