--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   ],
   "functions": {
     "api/**/*.ts": {
-      "runtime": "@vercel/node@latest"
+      "runtime": "@vercel/node@2.0.0"
     }
   }
 }
